--- a/node-send-mail/package.json
+++ b/node-send-mail/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js",
+    "start": "node sendToMe.js",
+    "sendToMe": "node sendToMe.js",
+    "sendToWen": "node sendToWen.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
